--- a/conch/asset/fonts/iconfont.css
+++ b/conch/asset/fonts/iconfont.css
@@ -14,546 +14,547 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.hl-icon-laiyuan:before {
+.enc-source:before {
   content: "\e709";
 }
 
-.hl-icon-nanguo:before {
+.enc-sad:before {
   content: "\e70a";
 }
 
-.hl-icon-wupinglun:before {
+.enc-no-comment:before {
   content: "\e708";
 }
 
-.hl-icon-wushuju:before {
+.enc-no-data:before {
   content: "\e707";
 }
 
-.hl-icon-jiantoushou:before {
+.hl-icon-arrow-back:before {
   content: "\e705";
 }
 
-.hl-icon-jiantouwei:before {
+.hl-icon-arrow-forward:before {
   content: "\e706";
 }
 
-.hl-icon-biaoqian:before {
+.hl-icon-tag:before {
   content: "\e704";
 }
 
-.hl-icon-biaoqian-fill:before {
+.hl-icon-tag-fill:before {
   content: "\e703";
 }
 
-.hl-icon-fasong:before {
+.enc-paper-plane:before {
   content: "\e701";
 }
 
-.hl-icon-lianjie:before {
+.enc-link:before {
   content: "\e6ff";
 }
 
-.hl-icon-dianshiju3:before {
+.enc-tv-drama:before {
   content: "\e6fe";
 }
 
-.hl-icon-dianshiju3-fill:before {
+.enc-tv-drama-fill:before {
   content: "\e6fd";
 }
 
-.hl-icon-jiangzhang:before {
+.enc-medal:before {
   content: "\e6fc";
 }
 
-.hl-icon-jiangzhang-fill:before {
+.enc-medal-fill:before {
   content: "\e6f7";
 }
 
-.hl-icon-jiantoushang-fill:before {
+.enc-caret-top-fill:before {
   content: "\e6f4";
 }
 
-.hl-icon-jiantouxia-fill:before {
+.enc-caret-bottom-fill:before {
   content: "\e6f5";
 }
 
-.hl-icon-jiaose:before {
+.enc-anonymous:before {
   content: "\e6e7";
 }
 
-.hl-icon-jiaose-fill:before {
+.enc-anonymous-fill:before {
   content: "\e6e8";
 }
 
-.hl-icon-huo:before {
+.enc-flame:before {
   content: "\e6e9";
 }
 
-.hl-icon-huo-fill:before {
+.enc-flame-fill:before {
   content: "\e6ea";
 }
 
-.hl-icon-hua:before {
+.enc-palette:before {
   content: "\e6eb";
 }
 
-.hl-icon-hua-fill:before {
+.enc-palette-fill:before {
   content: "\e6ec";
 }
 
-.hl-icon-gaoxiao:before {
+.enc-funny:before {
   content: "\e6ed";
 }
 
-.hl-icon-gaoxiao-fill:before {
+.enc-funny-fill:before {
   content: "\e6ee";
 }
 
-.hl-icon-gouwu:before {
+.enc-bag-shopping:before {
   content: "\e6ef";
 }
 
-.hl-icon-gouwu-fill:before {
+.enc-bag-shopping-fill:before {
   content: "\e6f0";
 }
 
-.hl-icon-shouye:before {
+.enc-house:before {
   content: "\e6df";
 }
 
-.hl-icon-shouye-fill:before {
+.enc-house-fill:before {
   content: "\e6e0";
 }
 
-.hl-icon-rili:before {
+.enc-calendar:before {
   content: "\e6e1";
 }
 
-.hl-icon-rili-fill:before {
+.enc-calendar-fill:before {
   content: "\e6e2";
 }
 
-.hl-icon-paihang:before {
+.enc-ranking:before {
   content: "\e6e3";
 }
 
-.hl-icon-paihang-fill:before {
+.enc-ranking-fill:before {
   content: "\e6e4";
 }
 
-.hl-icon-mingxing:before {
+.enc-star:before {
   content: "\e6e5";
 }
 
-.hl-icon-mingxing-fill:before {
+.enc-star-fill:before {
   content: "\e6e6";
 }
 
-.hl-icon-dianying:before {
+.enc-movie:before {
   content: "\e6c3";
 }
 
-.hl-icon-dianying-fill:before {
+.enc-movie-fill:before {
   content: "\e6c4";
 }
 
-.hl-icon-dianshiju:before {
+.enc-drama:before {
   content: "\e6c5";
 }
 
-.hl-icon-dianshiju-fill:before {
+.enc-drama-fill:before {
   content: "\e6c6";
 }
 
-.hl-icon-dianshiju2:before {
+.enc-drama2:before {
   content: "\e6c7";
 }
 
-.hl-icon-dianshiju2-fill:before {
+.enc-drama2-fill:before {
   content: "\e6c8";
 }
 
-.hl-icon-zongyi:before {
+.enc-variety:before {
   content: "\e6c9";
 }
 
-.hl-icon-zongyi-fill:before {
+.enc-variety-fill:before {
   content: "\e6ca";
 }
 
-.hl-icon-zhibo:before {
+.enc-live:before {
   content: "\e6cb";
 }
 
-.hl-icon-zhibo-fill:before {
+.enc-live-fill:before {
   content: "\e6cc";
 }
 
-.hl-icon-dongman:before {
+.enc-animation:before {
   content: "\e6cd";
 }
 
-.hl-icon-dongman-fill:before {
+.enc-animation-fill:before {
   content: "\e6ce";
 }
 
-.hl-icon-shexiangji:before {
+.enc-camera:before {
   content: "\e6cf";
 }
 
-.hl-icon-shexiangji-fill:before {
+.enc-camera-fill:before {
   content: "\e6d0";
 }
 
-.hl-icon-zuichun:before {
+.enc-latest:before {
   content: "\e6d1";
 }
 
-.hl-icon-zuichun-fill:before {
+.enc-latest-fill:before {
   content: "\e6d2";
 }
 
-.hl-icon-zhuanti:before {
+.enc-special:before {
   content: "\e6d3";
 }
 
-.hl-icon-zhuanti-fill:before {
+.enc-special-fill:before {
   content: "\e6d4";
 }
 
-.hl-icon-youxi:before {
+.enc-game:before {
   content: "\e6d5";
 }
 
-.hl-icon-youxi-fill:before {
+.enc-game-fill:before {
   content: "\e6d6";
 }
 
-.hl-icon-yinyue:before {
+.enc-music:before {
   content: "\e6d7";
 }
 
-.hl-icon-yinyue-fill:before {
+.enc-music-fill:before {
   content: "\e6d8";
 }
 
-.hl-icon-xinwen:before {
+.enc-news:before {
   content: "\e6d9";
 }
 
-.hl-icon-xinwen-fill:before {
+.enc-news-fill:before {
   content: "\e6da";
 }
 
-.hl-icon-zuixin:before {
+.enc-latest:before {
   content: "\e6db";
 }
 
-.hl-icon-zuixin-fill:before {
+.enc-latest-fill:before {
   content: "\e6dc";
 }
 
-.hl-icon-shu:before {
+.enc-book:before {
   content: "\e6dd";
 }
 
-.hl-icon-shu-fill:before {
+.enc-book-fill:before {
   content: "\e6de";
 }
 
-.hl-icon-zuanshi:before {
+.enc-diamond:before {
   content: "\e6b4";
 }
 
-.hl-icon-zuanshi-fill:before {
+.enc-diamond-fill:before {
   content: "\e6b5";
 }
 
-.hl-icon-vip:before {
+.enc-vip:before {
   content: "\e6b6";
 }
 
-.hl-icon-vip-fill:before {
+.enc-vip-fill:before {
   content: "\e6b7";
 }
 
-.hl-icon-tixing:before {
+.enc-reminder:before {
   content: "\e6b8";
 }
 
-.hl-icon-tixing-fill:before {
+.enc-reminder-fill:before {
   content: "\e6b9";
 }
 
-.hl-icon-shipinku:before {
+.enc-video-library:before {
   content: "\e6ba";
 }
 
-.hl-icon-shipinku-fill:before {
+.enc-video-library-fill:before {
   content: "\e6bb";
 }
 
-.hl-icon-shipin:before {
+.enc-video:before {
   content: "\e6bc";
 }
 
-.hl-icon-shipin-fill:before {
+.enc-video-fill:before {
   content: "\e6bd";
 }
 
-.hl-icon-huiyuan:before {
+.enc-member:before {
   content: "\e6be";
 }
 
-.hl-icon-huiyuan-fill:before {
+.enc-member-fill:before {
   content: "\e6bf";
 }
 
-.hl-icon-bofang:before {
+.enc-play:before {
   content: "\e6c0";
 }
 
-.hl-icon-bofang-fill:before {
+.enc-play-fill:before {
   content: "\e6c1";
 }
 
-.hl-icon-weixin:before {
+.enc-wechat:before {
   content: "\e6ac";
 }
 
-.hl-icon-weixin-fill:before {
+.enc-wechat-fill:before {
   content: "\e6ad";
 }
 
-.hl-icon-qq:before {
+.enc-qq:before {
   content: "\e6ae";
 }
 
-.hl-icon-qq-fill:before {
+.enc-qq-fill:before {
   content: "\e6af";
 }
 
-.hl-icon-pinglun:before {
+.enc-comment:before {
   content: "\e6b0";
 }
 
-.hl-icon-pinglun-fill:before {
+.enc-comment-fill:before {
   content: "\e6b1";
 }
 
-.hl-icon-liuyan:before {
+.enc-message:before {
   content: "\e6b2";
 }
 
-.hl-icon-liuyan-fill:before {
+.enc-message-fill:before {
   content: "\e6b3";
 }
 
-.hl-icon-xihuan:before {
+.enc-like:before {
   content: "\e6a8";
 }
 
-.hl-icon-xihuan-fill:before {
+.enc-like-fill:before {
   content: "\e6a9";
 }
 
-.hl-icon-xingxing:before {
+.enc-star2:before {
   content: "\e6aa";
 }
 
-.hl-icon-xingxing-fill:before {
+.enc-star2-fill:before {
   content: "\e6ab";
 }
 
-.hl-icon-zanshang:before {
+.enc-thumbs-up:before {
   content: "\e6a4";
 }
 
-.hl-icon-zanshang-fill:before {
+.enc-thumbs-up-fill:before {
   content: "\e6a5";
 }
 
-.hl-icon-zanxia:before {
+.enc-thumbs-down:before {
   content: "\e6a6";
 }
 
-.hl-icon-zanxia-fill:before {
+.enc-thumbs-down-fill:before {
   content: "\e6a7";
 }
 
-.hl-icon-fenxiang:before {
+.enc-share:before {
   content: "\e697";
 }
 
-.hl-icon-fenxiang2:before {
+.enc-share2:before {
   content: "\e698";
 }
 
-.hl-icon-shouji:before {
+.enc-phone:before {
   content: "\e68b";
 }
 
-.hl-icon-shoucang:before {
+.enc-favorite:before {
   content: "\e68c";
 }
 
-.hl-icon-shezhi:before {
+.enc-settings:before {
   content: "\e68d";
 }
 
-.hl-icon-shijian:before {
+.enc-time:before {
   content: "\e68e";
 }
 
-.hl-icon-jifenjilu:before {
+.enc-score-record:before {
   content: "\e68f";
 }
 
-.hl-icon-jifen:before {
+.enc-score:before {
   content: "\e690";
 }
 
-.hl-icon-jilu:before {
+.enc-record:before {
   content: "\e691";
 }
 
-.hl-icon-jubao:before {
+.enc-report:before {
   content: "\e692";
 }
 
-.hl-icon-lajitong:before {
+.enc-trash:before {
   content: "\e693";
 }
 
-.hl-icon-lihe:before {
+.enc-gift:before {
   content: "\e694";
 }
 
-.hl-icon-hongbao:before {
+.enc-red-envelope:before {
   content: "\e695";
 }
 
-.hl-icon-erweima:before {
+.enc-qr-code:before {
   content: "\e696";
 }
 
-.hl-icon-chongzhi:before {
+.enc-recharge:before {
   content: "\e688";
 }
 
-.hl-icon-chongzhijilu:before {
+.enc-recharge-record:before {
   content: "\e689";
 }
 
-.hl-icon-tixian:before {
+.enc-withdraw:before {
   content: "\e68a";
 }
 
-.hl-icon-bianji:before {
+.enc-edit:before {
   content: "\e685";
 }
 
-.hl-icon-appxz:before {
+.enc-app-download:before {
   content: "\e686";
 }
 
-.hl-icon-biaoqing:before {
+.enc-emoji:before {
   content: "\e687";
 }
 
-.hl-icon-tuichu:before {
+.enc-logout:before {
   content: "\e680";
 }
 
-.hl-icon-tuijian:before {
+.enc-recommend:before {
   content: "\e681";
 }
 
-.hl-icon-tongzhi:before {
+.enc-notification:before {
   content: "\e682";
 }
 
-.hl-icon-xiazai:before {
+.enc-download:before {
   content: "\e683";
 }
 
-.hl-icon-xie:before {
+.enc-write:before {
   content: "\e684";
 }
 
-.hl-icon-yifu:before {
+.enc-clothing:before {
   content: "\e67f";
 }
 
-.hl-icon-yueliang:before {
+.enc-moon:before {
   content: "\e67d";
 }
 
-.hl-icon-taiyang:before {
+.enc-sun:before {
   content: "\e67e";
 }
 
-.hl-icon-caidan:before {
+.enc-menu:before {
   content: "\e67a";
 }
 
-.hl-icon-zhengxu:before {
+.enc-ascending:before {
   content: "\e67b";
 }
 
-.hl-icon-daoxu:before {
+.enc-descending:before {
   content: "\e67c";
 }
 
-.hl-icon-sousuo:before {
+.enc-search:before {
   content: "\e676";
 }
 
-.hl-icon-shaixuan:before {
+.enc-filter:before {
   content: "\e677";
 }
 
-.hl-icon-shuaxin:before {
+.enc-refresh:before {
   content: "\e678";
 }
 
-.hl-icon-qiehuan:before {
+.enc-switch:before {
   content: "\e679";
 }
 
-.hl-icon-xiayiji:before {
+.enc-next:before {
   content: "\e675";
 }
 
-.hl-icon-shangyiji:before {
+.enc-previous:before {
   content: "\e671";
 }
 
-.hl-icon-dui:before {
+.enc-correct:before {
   content: "\e672";
 }
 
-.hl-icon-cuo:before {
+.enc-wrong:before {
   content: "\e673";
 }
 
-.hl-icon-jia:before {
+.enc-add:before {
   content: "\e674";
 }
 
-.hl-icon-jiantouxia:before {
+.enc-arrow-down:before {
   content: "\e66d";
 }
 
-.hl-icon-jiantouyou:before {
+.enc-arrow-right:before {
   content: "\e66e";
 }
 
-.hl-icon-jiantoushang:before {
+.enc-arrow-up:before {
   content: "\e66f";
 }
 
-.hl-icon-jiantouzuo:before {
+.enc-arrow-left:before {
   content: "\e670";
 }
+
