--- a/conch/asset/fonts/iconfont.css
+++ b/conch/asset/fonts/iconfont.css
@@ -8,7 +8,7 @@
 }
 
 .iconfont {
-  font-family: "iconfont" !important;
+  font-family: "encIcon" !important;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
