--- a/conch/asset/fonts/iconfont.css
+++ b/conch/asset/fonts/iconfont.css
@@ -7,7 +7,7 @@
   url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.svg?t=1590048286605#iconfont') format('svg'); /* iOS 4.1- */
 }
 
-.iconfont {
+.encFont {
   font-family: "encIcon" !important;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
